feat: 改了点东西

--- a/note/接口.md
+++ b/note/接口.md
@@ -1,11 +1,9 @@
-package com.eric.test.interfacee;
+#默认方法
 
-/**
- * @author liuBing
- */
+```java
 public interface Test01 {
-
     default String getName(String age){
         return age + "1";
     }
 }
+```
